# easy_ec2

./: .gitignore  README.md  launchpad.ipynb  new_demo.ipynb  new_new_demo.ipynb  pyproject.toml  sshconf_example.ipynb
.github/workflows/: python-app.yml  python-publish.yml
easy_boto3/: .easy_boto3_internal.yaml  __init__.py  cloudwatch_alarm_management.py  compound.py  ec2_connections_management.py  ec2_instance_management.py  main.py  router.py  set_profile.py  setup_session.py  startup_script_management.py
easy_boto3/cloudwatch/: cloudwatch.py  create.py  delete.py  list.py
easy_boto3/controller/: base.py
easy_boto3/ec2/: __init__.py  config_parser.py  connect.py  create.py  ec2.py  ec2_connections_management.py  ec2_instance_management.py  list.py  logs.py  script.py  ssh.py  start.py  stop.py  terminate.py
easy_boto3/ec2_management/: __init__.py  ec2_multi_instance_management.py  ec2_single_instance_management.py  startup_script_management.py
easy_boto3/profile/: active.py  adjuster.py  ownership.py  profile.py  validation.py
easy_boto3/utilities/: aws_profile_parser.py  decode_message.py  decorators.py  logger_maker.py  session_maker.py
easy_ec2/: __init__.py  compound.py  main.py  router.py  setup_session.py
easy_ec2/cloudwatch/: cloudwatch.py  create.py  delete.py  list.py
easy_ec2/ec2/: __init__.py  config_parser.py  connect.py  create.py  ec2.py  ec2_instance_management.py  list.py  logs.py  script.py  ssh.py  start.py  stop.py  terminate.py
easy_ec2/profile/: active.py  ownership.py  profile.py  validation.py
easy_ec2/utilities/: aws_profile_parser.py  logger_maker.py
examples/: small_test.yaml
notebooks/: 1_s3_actions.ipynb
tests/: test_ec2.py
tests/test_startups/: base_startup.sh
