[tool.poetry]
name = "easy_boto3"
version = "0.1.0"
description = ""
authors = ["Jeremy Watt <jermwatt@gmail.com>"]
readme = "README.md"
packages = [{include = "easy_boto3"}]

[tool.poetry.dependencies]
python = "^3.9"
boto3 = "^1.26.142"
python-dotenv = "^1.0.0"
toml = "^0.10.2"
paramiko = "^3.2.0"
requests = "^2.31.0"
pyyaml = "^6.0"
fire = "^0.5.0"
tomli = "^2.0.1"
botocore = "^1.31.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.23.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
