[tool.poetry]
name = "easy_ec2"
version = "0.1.8"
description = "`easy_ec2` simplifies remote `ec2` usage in vscode by adding a command line interface (CLI) and abridged Python API that allows you to easily create, manage, and tear-down AWS resources using `boto3` and `awscli` in a simple, easy to use, and easy to refactor `.yaml` configuration file."
authors = ["Jeremy Watt <jermwatt@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/jermwatt/easy_ec2"
packages = [{include = "easy_ec2"}]


[tool.poetry.scripts]
easy_ec2 = "easy_ec2.main:main"


[tool.poetry.dependencies]
python = "^3.9"
boto3 = "^1.26.142"
python-dotenv = "^1.0.0"
toml = "^0.10.2"
paramiko = "^3.2.0"
requests = "^2.31.0"
pyyaml = "^6.0"
fire = "^0.5.0"
tomli = "^2.0.1"
botocore = "^1.31.1"
yaspin = "^2.3.0"
sshconf = "^0.2.5"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
flake8 = "^4.0.1"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.23.1"
mypy = "^1.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
